# ONE

infra/scripts/: docker_build_cross_arm_runtime.sh
res/TensorFlowPythonExamples/examples/add/: __init__.py
runtime/onert/api/: CMakeLists.txt
runtime/onert/api/src/: nnfw_api.cc
runtime/onert/core/: CMakeLists.txt
runtime/onert/core/include/backend/: ITensor.h
runtime/onert/core/include/ir/: Shape.h
runtime/onert/core/include/util/: ShapeInference.h
runtime/onert/core/src/compiler/: Compiler.cc
runtime/onert/core/src/exec/: Execution.cc
runtime/onert/core/src/ir/: Shape.cc
runtime/onert/core/src/util/shapeinf/: Concat.cc
runtime/onert/frontend/base_loader/include/: base_loader.h
runtime/onert/frontend/nnapi/: execution.cc
runtime/onert/test/util/: ShapeInference.cc
tests/nnapi/: nnapi_gtest.skip.aarch64-linux.acl_neon  nnapi_gtest.skip.armv7l-linux.acl_cl  nnapi_gtest.skip.armv7l-linux.acl_neon  nnapi_gtest.skip.noarch.interp
tests/nnfw_api/src/: ModelTestDynamicTensor.cc  NNPackages.cc  NNPackages.h  RegressionTests.cc  fixtures.h  main.cc
tools/pbfile_tool/graph_splitter/: test7.py
